--- a/index.html
+++ b/index.html
@@ -1,49 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Lucky Me Lottery</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Fonts -->
-
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-
-    <!--CSS-->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="title">
-          <h1 class="job">Real Estate Developer</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <title>Future Me</title>
+  <!--Fonts-->
+  
+  <!--Fonts End-->
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!--Background Image-->
+  
+  <!--Nav-->
+  <div class="container-fluid">
+    <div class="navbar">
+      <h1 class="title">Real Estate Developer</h1>
+      <ul>
+        <li><a href="#overview">Overview</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#salary">Salary</a></li>
+        <li><a href="#skills">Skills</a></li>
+        
+      </ul>
+    </div>
+  </div>
+  <!--Nav End-->
+  <hr>
+  <!--Life / Early Years-->
+  <div class="content" id="overview">
+    <h1 class="title1">Job Overview</h1>
+  </div>
+  <!--Cards-->
+  <div class="main">
+    <ul class="cards">
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="/vincent1.jpg"></div>
+          <div class="card_content">
+            <h2 class="card_title">Childhood</h2>
+            <p class="card_text">Vincent van Gogh was born in the Brabant village of Zundert on 30 March 1853. The Van
+              Gogh family went on frequent walks in the area around Zundert, helping to instil a great love of nature in
+              the future artist. At the age of eleven, Vincent transferred to a boarding school in Zevenbergen where he
+              was deeply unhappy, but managed to complete his elementary schooling. Vincent didn't find his direction in
+              life until he was 27 years old.</p>
+          </div>
+        </div>
+      </li>
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="/vincent2.jpg"></div>
+          <div class="card_content">
+            <h2 class="card_title">Successful Years</h2>
+            <p class="card_text">Vincent's parents weren't very happy with his dream of an artist's life. Fortunately,
+              that did not stop Vincent from working hard and improving his skills. He practiced drawing and frequently
+              worked out of doors, while his brother supported him financially Vincent took painting lessons in The
+              Hague from a cousin by marriage, the celebrated artist Anton Mauve.Mauve taught Vincent the basics of
+              painting in watercolour and oils and Van Gogh visited his studio almost every day. Vincent van Gogh spent
+              one year in the mental hospital in Saint-Rémy-de-Provence. Despite his unstable mental health, he was very
+              productive: he made about 150 paintings in a year.</p>
+          </div>
+        </div>
+      </li>
+      <li class="cards_item">
+        <div class="card">
+          <div class="card_image"><img src="/vincent3.jpg"></div>
+          <div class="card_content">
+            <h2 class="card_title">Later In Life</h2>
+            <p class="card_text">Vincent spent the final months of his life in an artists' village near Paris. The
+              village offered Vincent the peace and quiet he needed, while being close enough to Paris for him to visit
+              his brother Theo. Vincent was advised to devote himself completely to his art. He did precisely that,
+              painting the gardens and wheatfields around the village at a feverish rate. No matter how 'healthy and
+              fortifying' Vincent found the countryside, it was to no avail. His illness and his uncertainty about the
+              future became too much. On 27 July 1890, he walked into a wheatfield and shot himself in the chest with a
+              pistol. Vincent was buried at Auvers on 30 July 1890. His legacy was a large body of art works: over 850
+              paintings and almost 1,300 works on paper.</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <!--Life / Early Years End-->
+  <hr>
+  <!--Greatest Accomplisments-->
+  <div class="content" id="education">
+    <h1 class="title1">Required Education</h1>
+  </div>
+  <!--Cards (Not my code)-->
+  <div class="blog-card">
+    <div class="meta">
+      <div class="photo" style="background-image: url(flowers.jpg)"></div>
+      <ul class="details">
+        <li class="author">Still Life: Red Poppies and Daisies</li>
+        <li class="date">Oil on canvas 1889</li>
+      </ul>
+    </div>
+    <div class="description">
+      <h1>Van Gogh produced about 1,000 drawings, sketches and watercolors, as well as around 1,250 other paintings. Van
+        Gogh’s works are displayed in museums all around the world, and are some of the most expensive pieces to
+        purchase.</h1>
+    </div>
+  </div>
+  <div class="blog-card alt">
+    <div class="meta">
+      <div class="photo" style="background-image: url(doctor.jpg)"></div>
+      <ul class="details">
+        <li class="author"><a href="#">Doctor Gachet</a></li>
+        <li class="date">June 1890</li>
+      </ul>
+    </div>
+    <div class="description">
+      <h1>Van Gogh created a unique, personal visual language which enabled him to show us the world through his eyes.
+        Van Gogh used an innovative approach to depict his own personality, thoughts, and feelings about the subject. He
+        made a remarkable achievement which raised the bar for every painter that followed him.</h1>
+    </div>
+  </div>
+  <!--Greatest Accomplisments End-->
+  <hr>
+  <!--Impact On History-->
+  <div class="content" id="salary">
+    <h1 class="title1">Potential Earnings</h1>
+  </div>
+  <!--Cards-->
+  <div class="row justify-content-center">
+    <div class="history col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card_title">Audience</h2>
+          <h5 class="card-title">Wide and diverse audiences have come to appreciate his art, and the record-breaking
+            attendance at exhibitions of his works reveal that, within the span of a century, van Gogh has become
+            perhaps the most recognized painter of all time. The prices his works have attained through auction and the
+            attention paid to forgery scandals have only increased van Gogh’s stature in the public imagination.</h5>
         </div>
       </div>
     </div>
+    <div class="history1 col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card_title">Perspective</h2>
+          <h5 class="card-title">Vincent van Gogh painted over 30 self-portraits between the years 1886 and 1889,
+            reflecting his ongoing pursuit of complementary colors and a bolder form. His collection of self-portraits
+            places him among the most dynamic self-portraitists of all time. Nowadays, people attempt to use his
+            approach to art and create new perspectives for the future society.</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Video-->
+  <div class="vid">
+    <iframe width="700" height="394" src="https://www.youtube.com/embed/qv8TANh8djI?si=Dehf_UPOqKJ3Qt7K"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
+  </div>
+  <!--Impact On History End-->
+  <hr>
+  <!--Notable Events-->
+  <div class="content" id="skills">
+    <h1 class="title1">Skills For Success</h1>
+  </div>
+  <!--Cards-->
+  <div class="row justify-content-center">
+    <div class="history col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card_title">Family</h2>
+          <h5 class="card-title">Vincent Van Gogh was born into a family of a low social class. He had always enjoyed art even though his parents didn't agree with his perspective. However, his parents as well as his siblings supported Vincent on his path to success. Additionally, Vincent's brother, Theo, had art of his own but not up to the standards of Vincent.</h5>
+        </div>
+      </div>
+    </div>
+    <div class="history1 col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card_title">Friends</h2>
+          <h5 class="card-title">Over the course of many years, Vincent Van Gogh became very close with his friend, Paul Gauguin. Earlier, Van Gogh had moved to Arles from Paris in order to establish what he called a “studio of the south”. There, he studied his skills and Gauguin accepted Van Gogh’s enthusiastic invitation, swayed heavily by the promised financial support from his art dealer.</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="history col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card_title">Artwork</h2>
+          <h5 class="card-title">Vincent van Gogh is mostly remembered for his striking color, definitive brushwork, and contoured forms of his art. While his paintings were beautiful works of art, they weren't appreciated while he was alive, primarily because he was smarter and ahead of his time, unsociable, mentally troubled, and uninterested in marketing himself.</h5>
+        </div>
+      </div>
+    </div>
+    <div class="history1 col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card_title">Illness</h2>
+          <h5 class="card-title">Vincent van Gogh struggled with mental illness throughout his life, but put his struggles into his art to eventually become one of the greatest artists in history. Depression and confusion caused Vincent Van Gogh to cut off his ear, shocking most of his companions. Sadly, on July 29 of 1890, Vincent Van Gogh committed suicide by shooting himself in the chest.</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Notable Events End-->
+  <hr>
+  <!--Footer-->
+  <!-- Grid container -->
+  <div class="footer text-center">
 
-    <!-- Bootstrap JavaScript Libraries -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
+    <div class="col-12 mb-4 mb-lg-0">
+      <ul class="list-inline">
+        <!--Gmail-->
+        <li class="list-inline-item"><a href="#" target="_blank" title="Gmail" class="btn text-white btn-floating m-1"
+            style="background-color: #000000;" role="button"><i class="fab fa-google"></i></a></li>
+        <!--Instagram-->
+        <li class="list-inline-item"><a href="#" target="_blank" title="Instagram"
+            class="btn text-white btn-floating m-1" style="background-color: #000000;" role="button"><i
+              class="fab fa-instagram"></i></a></li>
+        <!--Github-->
+        <li class="list-inline-item"><a href="https://github.com/dashboard" target="_blank" title="Github"
+            class="btn text-white btn-floating m-1" style="background-color: #000000;"
+            href="https://github.com/525santushevich" role="button"><i class="fab fa-github"></i></a></li>
+      </ul>
+    </div>
+    <!--Footer End-->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"
-    ></script>
-    <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
