--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <title>Future Me</title>
   <!--Fonts-->
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <!--Fonts End-->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -31,7 +33,7 @@
   </div>
   <!--Nav End-->
   <hr>
-  <!--Life / Early Years-->
+  <!--Overview-->
   <div class="content" id="overview">
     <h1 class="title1">Job Overview</h1>
   </div>
@@ -40,77 +42,86 @@
     <ul class="cards">
       <li class="cards_item">
         <div class="card">
-          <div class="card_image"><img src="/vincent1.jpg"></div>
           <div class="card_content">
-            <h2 class="card_title">Childhood</h2>
-            <p class="card_text">Vincent van Gogh was born in the Brabant village of Zundert on 30 March 1853. The Van
-              Gogh family went on frequent walks in the area around Zundert, helping to instil a great love of nature in
-              the future artist. At the age of eleven, Vincent transferred to a boarding school in Zevenbergen where he
-              was deeply unhappy, but managed to complete his elementary schooling. Vincent didn't find his direction in
-              life until he was 27 years old.</p>
+            <h2 class="card_title">Responsibilities</h2>
+            <p class="card_text">Real estate developers play an important role in the industry as they bridge the gap between the construction ability and the investor’s need. They cater to the value of a project in terms of design, functionality, cost and location. They also work hard in order to absorb international trends, deliver quality realty products and analyse customers’ expectations. The developers form an important aspect of the realty sector as they fulfill the critical need for infrastructure in areas like housing, office space, retail and entertainment, etc.
+
+            </p>
           </div>
         </div>
       </li>
       <li class="cards_item">
         <div class="card">
-          <div class="card_image"><img src="/vincent2.jpg"></div>
           <div class="card_content">
-            <h2 class="card_title">Successful Years</h2>
-            <p class="card_text">Vincent's parents weren't very happy with his dream of an artist's life. Fortunately,
-              that did not stop Vincent from working hard and improving his skills. He practiced drawing and frequently
-              worked out of doors, while his brother supported him financially Vincent took painting lessons in The
-              Hague from a cousin by marriage, the celebrated artist Anton Mauve.Mauve taught Vincent the basics of
-              painting in watercolour and oils and Van Gogh visited his studio almost every day. Vincent van Gogh spent
-              one year in the mental hospital in Saint-Rémy-de-Provence. Despite his unstable mental health, he was very
-              productive: he made about 150 paintings in a year.</p>
+            <h2 class="card_title">Environment</h2>
+            <p class="card_text">Real estate developers are often highly visible individuals in the community. It is important that they have excellent communication skills, be able to work with all kinds of people, and enjoy the speculative nature of their business. Some developers report to the job site every day, don a hard hat, and oversee the work of roofers, plumbers, and electricians. The developer must be flexible enough to adjust to the job's varying demands.</p>
           </div>
         </div>
       </li>
       <li class="cards_item">
         <div class="card">
-          <div class="card_image"><img src="/vincent3.jpg"></div>
           <div class="card_content">
-            <h2 class="card_title">Later In Life</h2>
-            <p class="card_text">Vincent spent the final months of his life in an artists' village near Paris. The
-              village offered Vincent the peace and quiet he needed, while being close enough to Paris for him to visit
-              his brother Theo. Vincent was advised to devote himself completely to his art. He did precisely that,
-              painting the gardens and wheatfields around the village at a feverish rate. No matter how 'healthy and
-              fortifying' Vincent found the countryside, it was to no avail. His illness and his uncertainty about the
-              future became too much. On 27 July 1890, he walked into a wheatfield and shot himself in the chest with a
-              pistol. Vincent was buried at Auvers on 30 July 1890. His legacy was a large body of art works: over 850
-              paintings and almost 1,300 works on paper.</p>
+            <h2 class="card_title">Impact on Society</h2>
+            <p class="card_text">Real estate development plays a significant role in shaping local economies and communities. The process of property development not only transforms the physical landscape but also has a profound impact on the economic growth and vitality of an area.</p>
           </div>
         </div>
       </li>
     </ul>
   </div>
-  <!--Life / Early Years End-->
+  <!--Overview End-->
   <hr>
-  <!--Greatest Accomplisments-->
-  <div class="content" id="education">
+  <!--Education-->
+  <div class="content" id="salary">
     <h1 class="title1">Required Education</h1>
+  </div>
+  <!--Cards-->
+  <div class="row justify-content-center">
+    <div class="history col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card_title">Degrees</h2>
+          <h5 class="card-title">To become a real estate developer you should earn a bachelor's or master's degree in a related field, get your real estate development license, and gather industry experience any way you can. As a real estate developer, you can work independently or for a company. A real estate developer must hold a bachelor's degree in a related field, such as management, business or even engineering, and many have real estate licenses in the states where they work.</h5>
+        </div>
+      </div>
+    </div>
+    <div class="history1 col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card_title">Subjects</h2>
+          <h5 class="card-title">Fields like architecture, planning and law each have their own degree programs but other potential development professionals may pursue a graduate degree in real estate to break into the field, such as a Master of Science in Real Estate, a Master of Real Estate Development or an MBA with a real estate concentration. MBAs offer the ability to get a broad exposure to different aspects of real estate with courses such as Real Estate Development, Real Estate Capital Markets and Urban Systems.</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Video-->
+  <div class="vid">
+    <iframe width="700" height="394" src="https://www.youtube.com/embed/fCk6ZruDghc?si=MBxkQYvYUof2Uba9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+
+  <!--Education End-->
+  <hr>
+  <!--Impact On History-->
+  <div class="content" id="Earnings">
+    <h1 class="title1">Potiential Earnings</h1>
   </div>
   <!--Cards (Not my code)-->
   <div class="blog-card">
     <div class="meta">
-      <div class="photo" style="background-image: url(flowers.jpg)"></div>
+      <div class="photo" style="background-image: url(/chart.jpg)"></div>
       <ul class="details">
         <li class="author">Still Life: Red Poppies and Daisies</li>
         <li class="date">Oil on canvas 1889</li>
       </ul>
     </div>
     <div class="description">
-      <h1>Van Gogh produced about 1,000 drawings, sketches and watercolors, as well as around 1,250 other paintings. Van
-        Gogh’s works are displayed in museums all around the world, and are some of the most expensive pieces to
-        purchase.</h1>
+      <h1>Salary Ranges: </h1>
     </div>
   </div>
   <div class="blog-card alt">
     <div class="meta">
-      <div class="photo" style="background-image: url(doctor.jpg)"></div>
+      <div class="photo" style="background-image: url(/pic.jpg)"></div>
       <ul class="details">
-        <li class="author"><a href="#">Doctor Gachet</a></li>
-        <li class="date">June 1890</li>
+        <li class="author"><a>Doctor Gachet</a></li>
       </ul>
     </div>
     <div class="description">
@@ -119,45 +130,7 @@
         made a remarkable achievement which raised the bar for every painter that followed him.</h1>
     </div>
   </div>
-  <!--Greatest Accomplisments End-->
-  <hr>
-  <!--Impact On History-->
-  <div class="content" id="salary">
-    <h1 class="title1">Potential Earnings</h1>
-  </div>
-  <!--Cards-->
-  <div class="row justify-content-center">
-    <div class="history col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <h2 class="card_title">Audience</h2>
-          <h5 class="card-title">Wide and diverse audiences have come to appreciate his art, and the record-breaking
-            attendance at exhibitions of his works reveal that, within the span of a century, van Gogh has become
-            perhaps the most recognized painter of all time. The prices his works have attained through auction and the
-            attention paid to forgery scandals have only increased van Gogh’s stature in the public imagination.</h5>
-        </div>
-      </div>
-    </div>
-    <div class="history1 col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <h2 class="card_title">Perspective</h2>
-          <h5 class="card-title">Vincent van Gogh painted over 30 self-portraits between the years 1886 and 1889,
-            reflecting his ongoing pursuit of complementary colors and a bolder form. His collection of self-portraits
-            places him among the most dynamic self-portraitists of all time. Nowadays, people attempt to use his
-            approach to art and create new perspectives for the future society.</h5>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--Video-->
-  <div class="vid">
-    <iframe width="700" height="394" src="https://www.youtube.com/embed/qv8TANh8djI?si=Dehf_UPOqKJ3Qt7K"
-      title="YouTube video player" frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen></iframe>
-  </div>
-  <!--Impact On History End-->
+  <!--Earnings-->
   <hr>
   <!--Notable Events-->
   <div class="content" id="skills">
