--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lugrasimo&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <!--Fonts End-->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -19,7 +25,7 @@
   <!--Background Image-->
   
   <!--Nav-->
-  <div class="container-fluid">
+  <div class="container-fluid d-flex col-12">
     <div class="navbar">
       <h1 class="title">Real Estate Developer</h1>
       <ul>
@@ -71,7 +77,7 @@
   <!--Overview End-->
   <hr>
   <!--Education-->
-  <div class="content" id="salary">
+  <div class="content" id="education">
     <h1 class="title1">Required Education</h1>
   </div>
   <!--Cards-->
@@ -80,7 +86,7 @@
       <div class="card">
         <div class="card-body">
           <h2 class="card_title">Degrees</h2>
-          <h5 class="card-title">To become a real estate developer you should earn a bachelor's or master's degree in a related field, get your real estate development license, and gather industry experience any way you can. As a real estate developer, you can work independently or for a company. A real estate developer must hold a bachelor's degree in a related field, such as management, business or even engineering, and many have real estate licenses in the states where they work.</h5>
+          <h5 style="margin-top: 3%; text-align: center" class="card-text">To become a real estate developer you should earn a bachelor's or master's degree in a related field, get your real estate development license, and gather industry experience any way you can. As a real estate developer, you can work independently or for a company. A real estate developer must hold a bachelor's degree in a related field, such as management, business or even engineering, and many have real estate licenses in the states where they work.</h5>
         </div>
       </div>
     </div>
@@ -88,7 +94,7 @@
       <div class="card">
         <div class="card-body">
           <h2 class="card_title">Subjects</h2>
-          <h5 class="card-title">Fields like architecture, planning and law each have their own degree programs but other potential development professionals may pursue a graduate degree in real estate to break into the field, such as a Master of Science in Real Estate, a Master of Real Estate Development or an MBA with a real estate concentration. MBAs offer the ability to get a broad exposure to different aspects of real estate with courses such as Real Estate Development, Real Estate Capital Markets and Urban Systems.</h5>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text">Fields like architecture, planning and law each have their own degree programs but other potential development professionals may pursue a graduate degree in real estate to break into the field, such as a Master of Science in Real Estate, a Master of Real Estate Development or an MBA with a real estate concentration. They offer the ability to get a broad exposure to different aspects of real estate with courses such as Real Estate Development, Real Estate Capital Markets and Urban Systems.</h5>
         </div>
       </div>
     </div>
@@ -101,36 +107,22 @@
   <!--Education End-->
   <hr>
   <!--Impact On History-->
-  <div class="content" id="Earnings">
+  <div class="content" id="salary">
     <h1 class="title1">Potiential Earnings</h1>
   </div>
   <!--Cards (Not my code)-->
   <div class="blog-card">
     <div class="meta">
-      <div class="photo" style="background-image: url(/chart.jpg)"></div>
-      <ul class="details">
-        <li class="author">Still Life: Red Poppies and Daisies</li>
-        <li class="date">Oil on canvas 1889</li>
-      </ul>
+      <div class="photo" style="background-image: url(/find-plans-for-your-old-house-176048_02-c1b538e94e07492eb1d2f8aa33075b02.jpg)"></div>
     </div>
     <div class="description">
-      <h1>Salary Ranges: </h1>
+      <h1>The current employment outlook for most real estate sectors is strong, particularly in the South and West. In general, the industry currently has a maturing workforce that is leading to additional job opportunities for graduates, a trend expected to continue well into the future.</h1>
     </div>
   </div>
-  <div class="blog-card alt">
-    <div class="meta">
-      <div class="photo" style="background-image: url(/pic.jpg)"></div>
-      <ul class="details">
-        <li class="author"><a>Doctor Gachet</a></li>
-      </ul>
-    </div>
-    <div class="description">
-      <h1>Van Gogh created a unique, personal visual language which enabled him to show us the world through his eyes.
-        Van Gogh used an innovative approach to depict his own personality, thoughts, and feelings about the subject. He
-        made a remarkable achievement which raised the bar for every painter that followed him.</h1>
-    </div>
+  <div class="money">
+      <img src="ss.jpg"></img>
   </div>
-  <!--Earnings-->
+  <!--Earnings End-->
   <hr>
   <!--Notable Events-->
   <div class="content" id="skills">
@@ -141,16 +133,16 @@
     <div class="history col-sm-4">
       <div class="card">
         <div class="card-body">
-          <h2 class="card_title">Family</h2>
-          <h5 class="card-title">Vincent Van Gogh was born into a family of a low social class. He had always enjoyed art even though his parents didn't agree with his perspective. However, his parents as well as his siblings supported Vincent on his path to success. Additionally, Vincent's brother, Theo, had art of his own but not up to the standards of Vincent.</h5>
+          <h2 class="card_title">Communication</h2>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text"></h5>
         </div>
       </div>
     </div>
     <div class="history1 col-sm-4">
       <div class="card">
         <div class="card-body">
-          <h2 class="card_title">Friends</h2>
-          <h5 class="card-title">Over the course of many years, Vincent Van Gogh became very close with his friend, Paul Gauguin. Earlier, Van Gogh had moved to Arles from Paris in order to establish what he called a “studio of the south”. There, he studied his skills and Gauguin accepted Van Gogh’s enthusiastic invitation, swayed heavily by the promised financial support from his art dealer.</h5>
+          <h2 class="card_title">Asset Management</h2>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text"></h5>
         </div>
       </div>
     </div>
@@ -159,16 +151,16 @@
     <div class="history col-sm-4">
       <div class="card">
         <div class="card-body">
-          <h2 class="card_title">Artwork</h2>
-          <h5 class="card-title">Vincent van Gogh is mostly remembered for his striking color, definitive brushwork, and contoured forms of his art. While his paintings were beautiful works of art, they weren't appreciated while he was alive, primarily because he was smarter and ahead of his time, unsociable, mentally troubled, and uninterested in marketing himself.</h5>
+          <h2 class="card_title">Marketing</h2>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text"></h5>
         </div>
       </div>
     </div>
     <div class="history1 col-sm-4">
       <div class="card">
         <div class="card-body">
-          <h2 class="card_title">Illness</h2>
-          <h5 class="card-title">Vincent van Gogh struggled with mental illness throughout his life, but put his struggles into his art to eventually become one of the greatest artists in history. Depression and confusion caused Vincent Van Gogh to cut off his ear, shocking most of his companions. Sadly, on July 29 of 1890, Vincent Van Gogh committed suicide by shooting himself in the chest.</h5>
+          <h2 class="card_title">Organization</h2>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text"></h5>
         </div>
       </div>
     </div>
