--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="card">
         <div class="card-body">
           <h2 class="card_title">Communication</h2>
-          <h5 style="margin-top: 3%; text-align: center;" class="card-text"></h5>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text">Good verbal skills will help you to clearly and effectively communicate information about properties, market trends, and the buying or selling process. This can help to build trust with your clients and employees, and ensure that they have a positive experience working with you.</h5>
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@
       <div class="card">
         <div class="card-body">
           <h2 class="card_title">Asset Management</h2>
-          <h5 style="margin-top: 3%; text-align: center;" class="card-text"></h5>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text">It is essential make good investment decisions, ensure the client's investment doesn't depreciate, and mitigate the client's exposure to risk. It brings a level of engagement to a property that exceeds what one would consider typical for a property manager collecting rents, paying the bills, and administering leases.</h5>
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@
       <div class="card">
         <div class="card-body">
           <h2 class="card_title">Marketing</h2>
-          <h5 style="margin-top: 3%; text-align: center;" class="card-text"></h5>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text">Effective marketing campaigns can help spread the word about your real estate development project and reach a larger audience. This can translate into more interest, sales, and a higher return on investment. Marketing can help you attract potential buyers and investors to your development by generating leads. This is especially important if your target audience doesn't live in the area or if the market is highly competitive.</h5>
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
       <div class="card">
         <div class="card-body">
           <h2 class="card_title">Organization</h2>
-          <h5 style="margin-top: 3%; text-align: center;" class="card-text"></h5>
+          <h5 style="margin-top: 3%; text-align: center;" class="card-text">Organization is crucial for real estate developers, enabling efficient project management, resource allocation, and risk mitigation, ensuring compliance and quality standards are met, ultimately enhancing project success and profitability. Without it, developers risk delays, cost overruns, and legal issues, jeopardizing project outcomes.</h5>
         </div>
       </div>
     </div>
